@@ -16,8 +16,12 @@ EXTRA_DIST = build_rpms.sh \
 	Makefile.common
 
 bin_SCRIPTS = xine-config
+bin_PROGRAMS = xine-list-@XINE_SERIES@
 
 pkgconfig_DATA=libxine.pc
+
+xine_list_@XINE_SERIES@_SOURCES = xine-list.c
+xine_list_@XINE_SERIES@_LDADD = $(XINE_LIB)
 
 xine-fontconv:	xine-fontconv.c
 	$(CC) -W -Wall -g -o xine-fontconv xine-fontconv.c -lz `freetype-config --cflags` `freetype-config --libs`
