@@ -2,6 +2,8 @@ xine-lib (1.1.12) 2008-??-??
   * Fixed and improved the PulseAudio driver.
   * Fixed a regression in 1.1.11.1 which broke Quicktime container handling.
   * And another, this time in the Matroska demuxer.
+  * Added a tool to assist with generating front ends' desktop files. It
+    lists MIME types & filename extensions known to the installed xine-lib.
 
 xine-lib (1.1.11.1) 2008-03-30
   * Security fixes:
